More work around translation.

--- a/Vie/fr.lproj/Localizable.strings
+++ b/Vie/fr.lproj/Localizable.strings
@@ -6,5 +6,9 @@
   Copyright (c) 2014 Fabien Warniez. All rights reserved.
 */
 
+"CFBundleDisplayName" = "Vie";
+
 "pause_button" = "Pause";
 "play_button" = "Jouer";
+"back_button" = "Précédent";
+"next_button" = "Suivant";
