--- a/Vie/en.lproj/Localizable.strings
+++ b/Vie/en.lproj/Localizable.strings
@@ -6,5 +6,9 @@
   Copyright (c) 2014 Fabien Warniez. All rights reserved.
 */
 
+"CFBundleDisplayName" = "Life";
+
 "pause_button" = "Pause";
 "play_button" = "Play";
+"back_button" = "Back";
+"next_button" = "Next";
