Added support for changing the board size through menus. Also refactored the way the user model is created and stored into the user defaults.

--- a/Vie/en.lproj/Localizable.strings
+++ b/Vie/en.lproj/Localizable.strings
@@ -9,4 +9,7 @@
 "CFBundleDisplayName" = "Life";
 
 "main_menu_title" = "Menu";
-"cell_color_title" = "Colors";
+"cell_color_title" = "Colours";
+"board_size_title" = "Sizes";
+"menu_item_cell_color" = "Cell Colours";
+"menu_item_board_size" = "Board Sizes";
