Changed the way the board borders are drawn. Changed color palette. Minor refactoring.

--- a/Vie/en.lproj/Localizable.strings
+++ b/Vie/en.lproj/Localizable.strings
@@ -16,3 +16,4 @@
 "board_size_small" = "Small";
 "board_size_medium" = "Medium";
 "board_size_large" = "Large";
+"board_size_extra_large" = "Extra Large";
