--- a/Vie/fr.lproj/Localizable.strings
+++ b/Vie/fr.lproj/Localizable.strings
@@ -16,3 +16,4 @@
 "board_size_small" = "Petite";
 "board_size_medium" = "Moyenne";
 "board_size_large" = "Grande";
+"board_size_extra_large" = "Très Grande";
