Implemented saved game edition and deletion. First pass.

--- a/Vie/en.lproj/Localizable.strings
+++ b/Vie/en.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "menu_item_load_game" = "Load Saved Game";
 "saved_game_picker_title" = "Saved Games";
 "menu_item_load_patterns" = "Load Patterns";
+"name" = "Name";
