--- a/Vie/fr.lproj/Localizable.strings
+++ b/Vie/fr.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "menu_item_load_game" = "Charger";
 "saved_game_picker_title" = "Parties";
 "menu_item_load_patterns" = "Motifs";
+"name" = "Name";
