Updated copyright and flurry version

--- a/Vie/Resources/fr.lproj/Localizable.strings
+++ b/Vie/Resources/fr.lproj/Localizable.strings
@@ -1,7 +1,7 @@
 /****************************************************************************/
 /* Localization file */
 
-"launch.copyright" = "© 2014 dot dot software, inc.";
+"launch.copyright" = "© 2016 (fabien & katrina) warniez";
 "launch.quick-play" = "Partie Rapide";
 "launch.patterns" = "Motifs";
 "launch.favourites" = "Favoris";
